--- a/html/ui.html
+++ b/html/ui.html
@@ -1,76 +1,84 @@
-<head>
+<head >
 	<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
 	<script src="scripts.js" type="text/javascript"></script>
 	<script src="debounce.min.js" type="text/javascript"></script>
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="styles.css" type="text/css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 
 <body>
 	<div class="full-screen">
 		<div class="bank-container">
 			<div class="header">
-				<img src="logo.png" class="logo">
-				<div class="header-right">
-					<h3 class="sans">Welcome Back, <span class="username">Unknown</span></h3>
-					<h4 class="sans">Current Balance: <span class="currentBalance"></span></h4>
+				<div class="logo">
+					<img src="logo.png" >
 				</div>
 			</div>
+			<div class="header2">
+				<h3 style="padding-top: 25px; padding-left: 50px; color:white;"class="sans">Bem-vindo novamente, Sr(a)
+					 <span style="color: rgb(224, 203, 15);" class="username">Unknown</span>
+
+				</h3>
+			</div>
+
 			<div class="body home">
+
 				<div class="centered">
-					<a href="#" class="button sans btnWithdraw">Withdraw</a>
-					<a href="#" class="button sans btnDeposit">Deposit</a>
-					<a href="#" class="button sans btnTransfer">Transfer</a>
-					<a href="#" class="button sans btnBalance">Balance</a>
-					<a href="#" class="button sans btnQuick">Withdraw $100</a>
-					<a href="#" class="button sans btnClose">Exit</a>
+					<form class="formboard" id="withdraw-form"> 
+						<div class="sacardin">Sacar Dinheiro </div>
+							<div class="saldobox">
+								</br>
+								<i >Saldo em Conta</i></br>
+								<span class="currentBalance"></span>
+							</div>
+						<input style="color:white;" id="amount" type="text" placeholder="Quantia" class="sans" required/><br>
+						<div class="botaofix">
+							<button style="float: bottom;" type="submit" id="submit" class="submit sans">Sacar</button>
+						</div>
+					</form>
+
+
+					<form class="formboard" id="deposit-form">
+						<div class="depositdin">Depositar Dinheiro </div>
+						<div class="saldobox">
+							</br><i>Valor para Depositar</i>
+						</div>
+						<input style="color:white;" id="amount" type="text" placeholder="Quantia" class="sans" required/><br>
+						<div class="botaofix">
+							<button type="submit" id="submit" class="submit sans">Depositar</button>
+						</div>
+					</form>
+
+
+					<form class="formboard" id="transfer-form">
+						<div class="transferdin">Transferir Dinheiro </div>
+						<div class="saldobox">
+							</br><i>Valor da Transferencia</i>
+						</div>
+						<input style="color:white;" id="amount" type="text" placeholder="Quantia" class="sans" required/><br>
+
+						<input style="color:white; margin-top: -30px;" id="toPlayer" type="text" placeholder="ID  da  Conta" class="sans" required/><br>
+						<div class="botaofix">
+						<button type="submit" id="submit" class="submit sans">Transferir</button>
+						</div>
+					</form>
+
+					<div class="menurapido">
+							<div class="menurapidoct">
+								<div class="quickmenu">Opções Rápidas</div>
+							</div>
+							<a id="ajustebutton" class="buttonnew btnQuick">Retirar R$150</a>
+						</div>
+
 				</div>
-			</div>
-			<div class="body balance-container">
-				<div class="centered">
-					<div class="number-display"><p class="sans">Current Balance: <span class="currentBalance"></span></p></div>
-					<a href="#" class="button sans btnWithdraw">Withdraw</a>
-					<a href="#" class="button sans btnDeposit">Deposit</a>
-					<a href="#" class="button sans btnHome">Home</a>
-					<a href="#" class="button sans btnClose">Exit</a>
-				</div>
-			</div>
-			<div class="body withdraw-container">
-				<div class="form">
-					<div class="notification"></div>
-					<form id="withdraw-form">
-              <input id="amount" type="text" placeholder="Amount" class="sans" required/><br>
-              <button type="submit" id="submit" class="submit sans">Withdraw</button>
-          </form>
-				</div>
-				<div class="centered">
-						<a href="#" class="button sans btnHome">Home</a>
-						<a href="#" class="button sans btnClose">Exit</a>
-				</div>
-			</div>
-			<div class="body deposit-container">
-				<div class="form">
-					<form id="deposit-form">
-              <input id="amount" type="text" placeholder="Amount" class="sans" required/><br>
-              <button type="submit" id="submit" class="submit sans">Deposit</button>
-          </form>
-				</div>
-				<div class="centered">
-						<a href="#" class="button sans btnHome">Home</a>
-						<a href="#" class="button sans btnClose">Exit</a>
-				</div>
-			</div>
-			<div class="body transfer-container">
-				<div class="form">
-					<form id="transfer-form">
-              <input id="amount" type="text" placeholder="Amount" class="sans" required/><br>
-              <input id="toPlayer" type="text" placeholder="To" class="sans" required/><br>
-              <button type="submit" id="submit" class="submit sans">Transfer</button>
-          </form>
-				</div>
-				<div class="centered">
-						<a href="#" class="button sans btnHome">Home</a>
-						<a href="#" class="button sans btnClose">Exit</a>
+
+					<div class="fecharbank">
+						<a  class="btnClose"><i class="fas fa-sign-out-alt"></i></a>
+					</div>
+					<div class="menubank">
+						<a  class="menubank"><i class="fas fa-align-justify"></i></a>
+					</div>
 				</div>
 			</div>
 		</div>
